crates/pandalang/src/snapshots/pandalang__eval__tests__evals@var__multi_letter.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/multi_letter.panda
---
Ok(
    Int(
        Int {
            n: 3,
        },
    ),
)
