crates/pandalang/src/snapshots/pandalang__eval__tests__evals@var__prime.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/var/prime.panda
---
2
