crates/pandalang/src/snapshots/pandalang__eval__tests__evals@var__underscore.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/underscore.panda
---
Ok(
    Int(
        Int {
            n: 9,
        },
    ),
)
