crates/pandalang/src/snapshots/pandalang__eval__tests__evals@var__var.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/var.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
